update scripts to SE 11, drop obsolete ones
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>